--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "EventBus.js",
   "scripts": {
     "test": "jest",
+    "deps": "depcheck",
     "test:coverage": "jest --coverage"
   },
   "repository": {
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/bmahlbrand/busdriver-js#readme",
   "dependencies": {
+    "depcheck": "^0.9.2",
     "jest": "^25.1.0"
   }
 }
