--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "dependencies": {
     "depcheck": "^0.9.2",
     "jest": "^25.1.0"
+  },
+  "devDependencies": {
+    "jsdoc": "^3.6.3"
   }
 }
