--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "busdriver",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
-  "main": "EventBus.js",
+  "main": "MessageBus.js",
   "scripts": {
     "test": "jest",
     "deps": "depcheck",
