--- a/package.json
+++ b/package.json
@@ -24,5 +24,11 @@
   },
   "devDependencies": {
     "jsdoc": "^3.6.3"
+  },
+  "jest": {
+    "verbose": true,
+    "modulePaths": [
+      "<rootDir>"
+    ]
   }
 }
