--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/bmahlbrand/busdriver-js#readme",
   "dependencies": {
+    "circular-buffer": "^1.0.3",
     "depcheck": "^0.9.2",
     "jest": "^25.1.0"
   },
